--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,8 +2,10 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
@@ -18,7 +20,9 @@
     <FrameLayout
         android:id="@+id/containerMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,7 +31,8 @@
             android:text="Text"
             android:id="@+id/text"
             android:gravity="center"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -35,10 +40,20 @@
             android:text="Connect"
             android:id="@+id/connect"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="80dp"/>
+            android:layout_marginBottom="80dp"
+            android:visibility="gone"/>
+
+        <com.android.volley.toolbox.NetworkImageView
+            android:layout_width="180dp"
+            android:layout_height="120dp"
+            android:id="@+id/imagePost"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="right|bottom"
+            android:scaleType="centerCrop"
+            android:visibility="gone"/>
     </FrameLayout>
 
-    <!--<include layout="@layout/content_main" />-->
+    <!--<include layout="@layout/content_sign_up" />-->
 
     <!--<android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
