--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_register_place"
+            android:checked="true"
+            android:icon="@mipmap/ic_card"
+            android:title="@string/register"/>
+
         <item
             android:id="@+id/nav_food"
             android:checked="true"
