--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/marginMinGlobal"
         android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/marginMinGlobal"
         ripple:rv_type="simpleRipple"
         ripple:rv_zoom="true"
         ripple:rv_color="@color/colorPrimary">
@@ -23,6 +24,13 @@
             android:src="@mipmap/default_profile"/>
 
     </com.andexert.library.RippleView>
+
+    <Spinner
+        android:id="@+id/category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilName"
