--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -26,7 +26,7 @@
     </com.andexert.library.RippleView>
 
     <Spinner
-        android:id="@+id/category"
+        android:id="@+id/idCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
