--- a/app/src/main/res/layout/fragment_list_place.xml
+++ b/app/src/main/res/layout/fragment_list_place.xml
@@ -31,4 +31,13 @@
         android:scaleType="centerCrop"
         android:visibility="visible"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:id="@+id/delete"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="80dp"
+        android:visibility="visible"/>
+
 </FrameLayout>
