--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,12 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="paddingGlobal">20dp</dimen>
+    <dimen name="paddingMaxGlobal">20dp</dimen>
+    <dimen name="paddingMediumGlobal">10dp</dimen>
     <dimen name="paddingMinGlobal">5dp</dimen>
+
     <dimen name="marginMaxGlobal">15dp</dimen>
+    <dimen name="marginMediumGlobal">10dp</dimen>
     <dimen name="marginMinGlobal">5dp</dimen>
 
     <dimen name="header_left_padding">16dp</dimen>
