--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <dimen name="header_height">192dp</dimen>
 
     <dimen name="perfil_image_size">64dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 </resources>
