--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -13,9 +13,9 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/imagePlace"
             android:layout_width="wrap_content"
             android:layout_height="192dp"
-            android:id="@+id/imagePlace"
             android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"
             android:src="@drawable/sucre"/>
@@ -29,18 +29,18 @@
             android:layout_marginRight="16dp">
 
             <TextView
+                android:id="@+id/namePlace"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Huellas de dinosario"
-                android:id="@+id/namePlace" />
+                android:text="Huellas de dinosario" />
 
             <TextView
+                android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Tourism"
-                android:id="@+id/category" />
+                android:text="Tourism" />
 
         </LinearLayout>
 
@@ -53,43 +53,31 @@
             android:layout_marginBottom="16dp">
 
             <Button
+                android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Share"
-                android:padding="10dp"
-                android:id="@+id/share" />
+                android:padding="10dp" />
 
             <Button
+                android:id="@+id/explore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Explore"
-                android:padding="10dp"
-                android:id="@+id/explore" />
+                android:padding="10dp" />
 
         </LinearLayout>
 
         <TextView
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Decription bla bla bla bla bla bla bla"
-            android:id="@+id/description"
             android:layout_marginBottom="24dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"/>
 
     </LinearLayout>
-
-    <!--this.idPlace = idPlace;
-    this.code = code;
-    this.name = name;
-    this.address = address;
-    this.latitude = latitude;
-    this.longitude = longitude;
-    this.description = description;
-    this.pathImage = pathImage;
-    this.date = date;
-    this.idCategory = idCategory;-->
-
 
 </android.support.v7.widget.CardView>
