--- a/app/src/main/res/layout/fragment_detail_place.xml
+++ b/app/src/main/res/layout/fragment_detail_place.xml
@@ -25,7 +25,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/cardMargen">
+                android:layout_margin="@dimen/cardMargin">
 
                 <LinearLayout
                     style="@style/CardContent"
@@ -50,7 +50,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/cardMargen">
+                android:layout_margin="@dimen/cardMargin">
 
                 <LinearLayout
                     style="@style/CardContent"
@@ -75,7 +75,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/cardMargen">
+                android:layout_margin="@dimen/cardMargin">
 
                 <LinearLayout
                     style="@style/CardContent"
@@ -101,14 +101,14 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <android.support.design.widget.AppBarLayout
+    <!--<android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_height="256dp"
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <!-- Collapser -->
+        &lt;!&ndash; Collapser &ndash;&gt;
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapser"
             android:layout_width="match_parent"
@@ -119,7 +119,7 @@
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <!-- Imagen del detalle -->
+            &lt;!&ndash; Imagen del detalle &ndash;&gt;
             <ImageView
                 android:id="@+id/image_paralax"
                 android:layout_width="match_parent"
@@ -128,7 +128,7 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
-            <!-- Toolbar -->
+            &lt;!&ndash; Toolbar &ndash;&gt;
             <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -140,7 +140,7 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>-->
 
     <!--<include layout="@layout/content_detail" />-->
 
@@ -151,7 +151,9 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@mipmap/ic_edit"
         app:borderWidth="0dp"
-        app:layout_anchor="@id/app_bar"
+
         app:layout_anchorGravity="bottom|right|end" />
+
+    <!--app:layout_anchor="@id/app_bar"-->
 
 </android.support.design.widget.CoordinatorLayout>
