--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -1,98 +1,180 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ripple="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="@dimen/paddingMaxGlobal"
     tools:context="com.apaza.moises.visitsucre.fragment.RegisterPlaceFragment">
 
-    <com.andexert.library.RippleView
-        android:id="@+id/selectImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/marginMinGlobal"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/marginMinGlobal"
-        ripple:rv_type="simpleRipple"
-        ripple:rv_zoom="true"
-        ripple:rv_color="@color/colorPrimary">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/default_profile"/>
-
-    </com.andexert.library.RippleView>
-
-    <Spinner
-        android:id="@+id/idCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textAlignment="center"/>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/name"
+            android:id="@+id/selectImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:hint="@string/name"/>
+            android:src="@mipmap/default_profile"
+            android:padding="@dimen/paddingMaxGlobal"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/grayTechno"/>
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/address"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPostalAddress"
-            android:ems="10"
-            android:hint="@string/address"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="@dimen/paddingMaxGlobal"
+            android:layout_marginTop="@dimen/marginMaxGlobal">
 
-    </android.support.design.widget.TextInputLayout>
+            <Spinner
+                android:id="@+id/idCategory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:ems="10"
+                    android:hint="@string/name"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPostalAddress"
+                    android:ems="10"
+                    android:hint="@string/address"/>
+
+            </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/tilDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:hint="@string/description"/>
+                <EditText
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:hint="@string/description"/>
 
-    </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
 
-    <com.andexert.library.RippleView
+            <Button
+                android:id="@+id/register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_button"
+                android:textColor="@android:color/white"
+                android:text="@string/register" />
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/marginMaxGlobal"
-        ripple:rv_type="doubleRipple"
-        ripple:rv_zoom="true">
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@mipmap/ic_camera_white_24dp"
+        app:borderWidth="0dp"
+        app:layout_anchor="@id/selectImage"
+        app:layout_anchorGravity="bottom|right|end" />
 
-        <Button
-            android:id="@+id/register"
-            android:layout_width="match_parent"
+    <!--<com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:borderWidth="0dp"
+        app:layout_anchor="@id/detail1"
+        app:layout_anchorGravity="bottom|right|end"
+        fab:menu_animationDelayPerItem="55"
+        fab:menu_backgroundColor="@android:color/transparent"
+        fab:menu_buttonSpacing="0dp"
+        fab:menu_colorNormal="@color/color_accent"
+        fab:menu_colorPressed="@color/colorAccent"
+        fab:menu_colorRipple="@color/grayTechno"
+        fab:menu_fab_label="Floating Action Menu"
+        fab:menu_fab_size="normal"
+        fab:menu_icon="@drawable/fab_add"
+        fab:menu_labels_colorNormal="@color/grayTechno"
+        fab:menu_labels_colorPressed="@color/colorAccent"
+        fab:menu_labels_colorRipple="@color/colorPrimary"
+        fab:menu_labels_cornerRadius="@dimen/cornerDefault"
+        fab:menu_labels_ellipsize="none"
+        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+        fab:menu_labels_margin="0dp"
+        fab:menu_labels_maxLines="-1"
+        fab:menu_labels_padding="2dp"
+        fab:menu_labels_position="left"
+        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+        fab:menu_labels_showShadow="false"
+        fab:menu_labels_singleLine="true"
+        fab:menu_labels_textColor="@android:color/white"
+        fab:menu_labels_textSize="15sp"
+        fab:menu_openDirection="down"
+        fab:menu_shadowColor="@android:color/transparent"
+        fab:menu_shadowRadius="4dp"
+        fab:menu_shadowXOffset="1dp"
+        fab:menu_shadowYOffset="0dp"
+        fab:menu_showShadow="true"
+        android:visibility="gone">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/shareFace"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_button"
-            android:textColor="@android:color/white"
-            android:text="@string/register" />
+            android:src="@mipmap/ic_share_facebook"
+            fab:fab_colorNormal="@android:color/white"
+            fab:fab_colorPressed="@color/colorPrimary"
+            fab:fab_colorRipple="@android:color/darker_gray"
+            fab:fab_label="Menu Item 1"
+            fab:fab_size="mini" />
 
-    </com.andexert.library.RippleView>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/shareWhatsApp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_share_whatsapp"
+            fab:fab_colorNormal="@android:color/white"
+            fab:fab_colorPressed="@color/colorPrimary"
+            fab:fab_colorRipple="@android:color/darker_gray"
+            fab:fab_label="Menu Item 2"
+            fab:fab_size="mini" />
 
-</LinearLayout>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/shareTwitter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_share_twitter"
+            fab:fab_colorNormal="@android:color/white"
+            fab:fab_colorPressed="@color/colorPrimary"
+            fab:fab_colorRipple="@android:color/darker_gray"
+            fab:fab_label="Menu Item 3"
+            fab:fab_size="mini" />
+    </com.github.clans.fab.FloatingActionMenu>-->
+
+</android.support.design.widget.CoordinatorLayout>
