--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -1,10 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.apaza.moises.visitsucre.fragment.OnBoardingFragment">
+    tools:context="com.apaza.moises.visitsucre.fragment.OnBoardingFragment"
+    android:background="@color/colorPrimary">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -18,11 +19,43 @@
 
         </android.support.v4.view.ViewPager>
 
+        <!--This indicator is for other on boarding-->
+        <me.relex.circleindicator.CircleIndicator
+            android:id="@+id/indicator2"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:visibility="gone"/>
+
+    </FrameLayout>
+
+    <View style="@style/StyleDivideVertical"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/paddingMaxGlobal">
+
+        <ImageButton
+            android:id="@+id/skip"
+            android:layout_gravity="left"
+            android:src="@mipmap/ic_menu_back"
+            style="@style/ImageButtonTechno"
+            android:background="@drawable/circle_button"/>
+
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_gravity="bottom|center_horizontal"/>
+
+        <ImageButton
+            android:id="@+id/next"
+            android:layout_gravity="right"
+            android:src="@mipmap/ic_menu_forward"
+            style="@style/ImageButtonTechno"
+            android:visibility="visible"
+            android:background="@drawable/circle_button"/>
 
     </FrameLayout>
 
@@ -30,10 +63,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="18dp"
+        android:padding="@dimen/paddingMaxGlobal"
         android:background="@android:color/white"
         android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal|bottom">
+        android:layout_gravity="center_horizontal|bottom"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/signUp"
