--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,27 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
     <item
+        android:id="@+id/action_filter"
+        android:title="@string/filter"
+        android:icon="@mipmap/ic_filter_white_24dp"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom|withText"
+        android:visible="false"/>
+
+    <item
         android:id="@+id/action_new_category"
         android:title="@string/new_category"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_test_database"
         android:title="Test DB"
-        android:orderInCategory="2"
+        android:orderInCategory="97"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_show_collections_db"
         android:title="Show DB collections"
-        android:orderInCategory="3"
+        android:orderInCategory="98"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_delete_collections_db"
         android:title="Delete DB collections"
-        android:orderInCategory="4"
+        android:orderInCategory="99"
         app:showAsAction="never"/>
 
     <item
@@ -31,4 +39,7 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
+
+
 </menu>
