implementing location listener

--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -4,16 +4,41 @@
     android:layout_height="match_parent"
     tools:context="com.apaza.moises.visitsucre.fragment.PlaceInMapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
     <fragment
         android:id="@+id/mapVisitSucre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.MapFragment"/>
+        class="com.google.android.gms.maps.SupportMapFragment"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:padding="@dimen/paddingMediumGlobal"
+        android:layout_margin="@dimen/marginMediumGlobal"
+        android:layout_gravity="center_horizontal|top">
+
+        <TextView
+            android:id="@+id/txtLatitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text" />
+
+        <TextView
+            android:id="@+id/txtLongitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/btnLocation" />
+    </LinearLayout>
 
 </FrameLayout>
