--- a/app/src/main/res/layout/activity_detail_place.xml
+++ b/app/src/main/res/layout/activity_detail_place.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.apaza.moises.visitsucre.DetailPlaceActivity"
+    tools:context=".ui.DetailPlaceActivity"
     xmlns:fab="http://schemas.android.com/apk/res-auto">
 
     <!-- Object with Scroll -->
