--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_sign_up"
-    tools:context="com.apaza.moises.visitsucre.SignUpActivity">
+    tools:context=".ui.SignUpActivity">
 
 </RelativeLayout>
