--- a/app/src/main/res/layout/fragment_detail_place.xml
+++ b/app/src/main/res/layout/fragment_detail_place.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="com.apaza.moises.visitsucre.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <!-- Objeto con Scroll -->
     <android.support.v4.widget.NestedScrollView
