--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/paddingMaxGlobal"
-    tools:context="com.apaza.moises.visitsucre.fragment.LoginFragment">
+    tools:context=".ui.fragment.LoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
