--- a/app/src/main/res/layout/fragment_place_list.xml
+++ b/app/src/main/res/layout/fragment_place_list.xml
@@ -6,4 +6,4 @@
     android:layout_height="match_parent"
     android:paddingTop="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.apaza.moises.visitsucre.fragment.CategoryListFragment"/>
+    tools:context=".ui.fragment.CategoryListFragment"/>
