--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.apaza.moises.visitsucre.fragment.RegisterPlaceFragment">
+    tools:context=".ui.fragment.RegisterPlaceFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
