--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.MainActivity">
 
     <item
         android:id="@+id/action_filter"
@@ -15,5 +15,29 @@
         android:title="@string/new_category"
         android:orderInCategory="2"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_test_database"
+        android:title="Test DB"
+        android:orderInCategory="97"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_show_collections_db"
+        android:title="Show DB collections"
+        android:orderInCategory="98"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_delete_collections_db"
+        android:title="Delete DB collections"
+        android:orderInCategory="99"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 
 </menu>
