--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -24,6 +24,11 @@
             android:icon="@mipmap/ic_fav_off"
             android:title="@string/all"/>
 
+        <item
+            android:id="@+id/test_db"
+            android:icon="@mipmap/ic_error"
+            android:title="Test DB"/>
+
         <!-- Section setting -->
         <item
             android:id="@+id/configuration_section"
