implementing input text view

--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:moi="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.fragment.RegisterPlaceFragment">
 
@@ -34,7 +35,7 @@
                 android:layout_gravity="center_horizontal"
                 android:textAlignment="center"/>
 
-            <android.support.design.widget.TextInputLayout
+            <!--<android.support.design.widget.TextInputLayout
                 android:id="@+id/tilName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -47,7 +48,15 @@
                     android:ems="10"
                     android:hint="@string/name"/>
 
-            </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>-->
+            <com.apaza.moises.visitsucre.ui.InputTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                moi:iconImage="@mipmap/ic_help"
+                moi:hint="@string/name"
+                moi:maxLengthEnabled="true"
+                moi:maxLength="10"
+                android:inputType="phone"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilAddress"
