--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,5 +58,12 @@
         <item name="android:background">@android:color/darker_gray</item>
     </style>
 
+    <style name="Counter" parent="TextAppearance.Design.Counter">
+        <item name="android:textColor">#42A5F5</item>
+    </style>
+
+    <style name="CounterOverFlow" parent="TextAppearance.Design.Counter.Overflow">
+        <item name="android:textColor">#FF7043</item>
+    </style>
 
 </resources>
