--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -18,20 +18,20 @@
         android:background="@android:color/white"
         android:padding="@dimen/paddingMediumGlobal"
         android:layout_margin="@dimen/marginMediumGlobal"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="center_horizontal|bottom">
 
         <TextView
             android:id="@+id/txtLatitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Medium Text" />
 
         <TextView
             android:id="@+id/txtLongitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Medium Text" />
 
         <Button
