--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -11,6 +11,12 @@
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment"/>
 
+    <fragment
+        android:id="@+id/supportMap"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.apaza.moises.visitsucre.ui.fragment.SupportMap"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
