--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -5,11 +5,11 @@
     tools:context=".ui.fragment.PlaceInMapFragment">
 
 
-    <fragment
+    <!--<fragment
         android:id="@+id/mapVisitSucre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
+        class="com.google.android.gms.maps.SupportMapFragment"/>-->
 
     <fragment
         android:id="@+id/supportMap"
