--- a/app/src/main/res/layout/view_marker.xml
+++ b/app/src/main/res/layout/view_marker.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="60dp"
-    android:background="@color/color_success"
+    android:layout_height="100dp"
+    android:background="@android:color/transparent"
     android:layout_gravity="center">
 
-    <ImageView
-        android:id="@+id/marker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_map_marker_grey600_24dp"
-        android:layout_gravity="bottom|center_horizontal"/>
-
     <View
-        android:id="@+id/shadow"
+        android:id="@+id/vShadow"
         android:layout_width="20dp"
-        android:layout_height="3dp"
+        android:layout_height="10dp"
         android:background="@drawable/marker_shadow"
         android:layout_gravity="bottom|center_horizontal"/>
+
+    <ImageView
+        android:id="@+id/ivMarker"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:src="@mipmap/map_marker_pick_up_2"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="5dp"/>
 </FrameLayout>
