--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@android:string/ok"
-            android:id="@+id/btnOK" />
+            android:id="@+id/btnSelected" />
     </LinearLayout>
 
 </FrameLayout>
